--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1def7355",
    "metadata": {},
    "outputs": [
@@ -37,6 +37,13 @@
     "\n",
     "\n",
     "path = \"/content/\"\n",
+    "debug = True\n",
+    "\n",
+    "from google.colab import drive\n",
+    "drive.mount(path+'/drive/')\n",
+    "\n",
+    "if debug == True:\n",
+    "    A5_savepath = path+'/drive/MyDrive/03 McGill EE Semester 5 (Fall 2025)/ECSE 415 (Clark)/A5/'\n",
     "\n",
     "print(f\"Python version:           {os.sys.version.split()[0]}\")\n",
     "print(f\"OpenCV version:           {cv2.__version__}\")\n",
@@ -55,9 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd path\n",
-    "!kaggle competitions download -c ecse-415-video-analysis\n",
-    "!unzip ecse-415-video-analysis.zip -d .\n"
+    "if debug == False:\n",
+    "    os.chdir(path)\n",
+    "    !pip install kaggle\n",
+    "    !mkdir -p ~/.kaggle\n",
+    "    !cp /content/drive/MyDrive/Kaggle_API/kaggle.json ~/.kaggle/\n",
+    "    !chmod 600 ~/.kaggle/kaggle.json\n",
+    "    !kaggle competitions download -c ecse-415-video-analysis\n",
+    "    !unzip -q ecse-415-video-analysis.zip -d ."
    ]
   },
   {
@@ -67,16 +79,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "task1_dir = Path(path, \"Object_Tracking\", \"Task1\")\n",
-    "csv_path = Path(task1_dir, \"gt\", \"gt.txt\")\n",
-    "ground_truth = np.loadtxt(\"csv_path\", delimiter=\",\",skiprows=1)\n",
+    "csv1_path = Path(task1_dir, \"gt\", \"gt.txt\")\n",
+    "ground_truth_task1 = np.loadtxt(csv1_path, delimiter=\",\")\n",
     "\n",
+    "images1_path = Path(task1_dir, \"images\")\n",
+    "first_iter = True\n",
+    "for img in os.listdir(images1_path):\n",
+    "    img_path = Path(images1_path, img)\n",
+    "    img_bgr = cv2.imread(img_path)\n",
+    "    img_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
+    "    if first_iter == True: \n",
+    "        H, W, _ = img_rgb.shape\n",
+    "        first_iter == False\n",
+    "        fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # Codec\n",
+    "        fps = 14.0\n",
+    "        frame_size = (W,H)\n",
+    "        if debug == True:\n",
+    "            mp4_path = os.path.join(A5_savepath, 'task1_input.mp4') \n",
+    "        else:\n",
+    "            mp4_path = path\n",
+    "        writer = cv2.VideoWriter(mp4_path, fourcc,fps,frame_size)\n",
+    "    writer.write(img_rgb)\n",
+    "writer.release()\n",
+    "print(f\"Wrote .mp4 to {mp4_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aee1b0d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Source: https://www.kaggle.com/code/nityampareek/using-deepsort-object-tracker-with-yolov5\n",
     "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "import glob\n",
     "\n",
+    "import time\n",
+    "import torch\n",
     "\n",
+    "# Creating a class for object detection which plots boxes and scores frames in addition to detecting an \n",
+    "# object\n",
     "\n",
+    "class YoloDetector():\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        #Using yolov5s for our purposes of object detection, you may use a larger model\n",
+    "        self.model = torch.hub.load('ultralytics/yolov5', 'yolov5s', pretrained = True)\n",
+    "        self.classes = self.model.names\n",
+    "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "        print('Using Device: ', self.device)\n",
+    "    \n",
+    "    def score_frame(self, frame):\n",
+    "        self.model.to(self.device)\n",
+    "        downscale_factor = 2\n",
+    "        width = int(frame.shape[1] / downscale_factor)\n",
+    "        height = int(frame.shape[0] / downscale_factor)\n",
+    "        frame = cv2.resize(frame, (width, height))\n",
+    "\n",
+    "        results = self.model(frame)\n",
+    "\n",
+    "        labels, cord = results.xyxyn[0][:, -1], results.xyxyn[0][:, :-1]\n",
+    "\n",
+    "        return labels, cord\n",
+    "    \n",
+    "    def class_to_label(self, x):\n",
+    "        return self.classes[int(x)]\n",
+    "    \n",
+    "    def plot_boxes(self, results, frame, height, width, confidence=0.3):\n",
+    "\n",
+    "        labels, cord = results\n",
+    "        detections = []\n",
+    "\n",
+    "        n = len(labels)\n",
+    "        x_shape, y_shape = width, height\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            row = cord[i]\n",
+    "\n",
+    "            if row[4]>=confidence:\n",
+    "                x1, y1, x2, y2 = int(row[0]*x_shape), int(row[1]*y_shape), int(row[2]*x_shape), int(row[3]*y_shape)\n",
+    "                \n",
+    "                #In this demonstration, we will only be detecting persons. You can add classes of your choice\n",
+    "                if self.class_to_label(labels[i]) == 'car':\n",
+    "                    x_center = x1 + (x2-x1)\n",
+    "                    y_center = y1 + ((y2-y1) / 2)\n",
+    "                    tlwh = np.asarray([x1, y1, int(x2-x1), int(y2-y1)], dtype = np.float32)\n",
+    "                    confidence = float(row[4].item())\n",
+    "                    feature = 'car'\n",
+    "                    detections.append(([x1, y1, int(x2-x1), int(y2-y1)], row[4].item(), 'car'))\n",
+    "        return frame, detections\n",
+    "\n",
+    "# Setting input video to webcam\n",
+    "# To use your own pre-downloaded videos, write the file path instead of 0\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Setting resolution for webcam\n",
+    "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
+    "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)\n",
+    "\n",
+    "#Initializing the detection class\n",
+    "detector = YoloDetector()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d431ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
