Changed to bytetrack

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -684,11 +684,7 @@
     "    \n",
     "    # Try different codecs for better compatibility\n",
     "    codecs_to_try = [\n",
-    "        ('avc1', 'H.264 (avc1)'),\n",
-    "        ('H264', 'H.264 (H264)'),\n",
-    "        ('X264', 'H.264 (X264)'),\n",
     "        ('mp4v', 'MPEG-4'),\n",
-    "        ('XVID', 'XVID')\n",
     "    ]\n",
     "    \n",
     "    writer = None\n",
@@ -750,7 +746,117 @@
    "id": "ex1vuw2r4dd",
    "metadata": {},
    "outputs": [],
-   "source": "# ===== PART 4: Task2 - YOLOv8 with ByteTrack (IMPROVED) =====\n\nprint(\"Running improved YOLOv8 + ByteTrack on Task2...\")\n\n# Use larger model for better accuracy\nprint(\"Loading YOLOv8 medium model...\")\nmodel_task2 = YOLO('yolov8m.pt')  # Medium model - much better than nano!\nprint(\"✓ Model loaded\")\n\n# Open input video\ncap_task2 = cv2.VideoCapture(mp4_path_task2)\n\n# Get video properties\nfps_task2 = cap_task2.get(cv2.CAP_PROP_FPS)\nwidth_task2 = int(cap_task2.get(cv2.CAP_PROP_FRAME_WIDTH))\nheight_task2 = int(cap_task2.get(cv2.CAP_PROP_FRAME_HEIGHT))\ntotal_frames_task2 = int(cap_task2.get(cv2.CAP_PROP_FRAME_COUNT))\n\nprint(f\"Video properties: {width_task2}x{height_task2}, {total_frames_task2} frames\")\n\n# Set up output paths\nif debug == True:\n    output_path_task2 = os.path.join(A5_savepath, 'task2.mp4')\n    count_csv_path = os.path.join(A5_savepath, 'task2_count.csv')\nelse:\n    output_path_task2 = 'task2.mp4'\n    count_csv_path = 'task2_count.csv'\n\n# Set up output video writer\nfourcc = cv2.VideoWriter_fourcc(*'mp4v')\nout_task2 = cv2.VideoWriter(output_path_task2, fourcc, fps_task2, (width_task2, height_task2))\n\n# Open CSV file for counting\ncount_file = open(count_csv_path, 'w')\ncount_file.write('Number,Count\\n')  # Header\n\n# Process video frame by frame\nframe_idx = 0\nframe_counts = []\n\nprint(\"Processing frames with ByteTrack (better than DeepSORT)...\")\n\n# IMPROVED: Better detection parameters\nconf_threshold = 0.25  # Lower to catch more people\niou_threshold = 0.45   # NMS threshold\n\nwhile cap_task2.isOpened():\n    ret, frame = cap_task2.read()\n    if not ret:\n        break\n    \n    frame_idx += 1\n    \n    # IMPROVED: Use YOLOv8 built-in ByteTrack!\n    # This is MUCH better than DeepSORT for pedestrian tracking\n    results = model_task2.track(\n        frame,\n        persist=True,          # Keep tracks across frames\n        tracker='bytetrack.yaml',  # Use ByteTrack (better than DeepSORT!)\n        classes=[0],           # Person only\n        conf=conf_threshold,\n        iou=iou_threshold,\n        verbose=False\n    )\n    \n    # Count and draw tracked objects\n    people_count = 0\n    \n    for result in results:\n        boxes = result.boxes\n        if boxes is None or boxes.id is None:\n            continue\n            \n        for box in boxes:\n            # Get tracking ID\n            if box.id is not None:\n                track_id = int(box.id.cpu().numpy()[0])\n            else:\n                continue\n            \n            people_count += 1\n            \n            x1, y1, x2, y2 = box.xyxy[0].cpu().numpy()\n            conf = box.conf[0].cpu().numpy()\n            \n            x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2)\n            \n            # Draw bounding box\n            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n            \n            # Draw tracking ID\n            label = f'ID:{track_id} {conf:.2f}'\n            label_size, _ = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.5, 2)\n            label_y = max(y1 - 10, label_size[1] + 10)\n            \n            cv2.rectangle(frame, (x1, label_y - label_size[1] - 5), \n                         (x1 + label_size[0], label_y), (0, 255, 0), -1)\n            \n            cv2.putText(frame, label, (x1, label_y - 3), \n                       cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 0), 2)\n    \n    # Add frame number and count overlay\n    cv2.putText(frame, f'Frame: {frame_idx}/{total_frames_task2}', (10, 30), \n               cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n    cv2.putText(frame, f'Count: {people_count}', (10, 60), \n               cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n    \n    # Write frame to output video\n    out_task2.write(frame)\n    \n    # Write count to CSV\n    count_file.write(f'{frame_idx},{people_count}\\n')\n    frame_counts.append((frame_idx, people_count))\n    \n    # Progress indicator\n    if frame_idx % 100 == 0:\n        print(f\"  Processed {frame_idx}/{total_frames_task2} frames ({frame_idx/total_frames_task2*100:.1f}%)\")\n\n# Release resources\ncap_task2.release()\nout_task2.release()\ncount_file.close()\n\nprint(f\"\\n✓ Part 4 Complete: Improved Task2 tracking finished!\")\nprint(f\"  Output video: {output_path_task2}\")\nprint(f\"  Count CSV: {count_csv_path}\")\nprint(f\"  Total frames: {frame_idx}\")\nprint(f\"  Average people per frame: {sum([c for _, c in frame_counts])/len(frame_counts):.2f}\")\nprint(f\"\\nImprovements:\")\nprint(f\"  - Using YOLOv8m (medium) instead of YOLOv8n (nano)\")\nprint(f\"  - Using ByteTrack instead of DeepSORT (better accuracy!)\")\nprint(f\"  - Lower confidence threshold: {conf_threshold}\")"
+   "source": [
+    "# ===== PART 2: YOLOv8 + ByteTrack Tracking Implementation =====\n",
+    "\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# Initialize YOLOv8 model (medium for better accuracy at distance)\n",
+    "print(\"Loading YOLOv8 model...\")\n",
+    "model = YOLO('yolov8m.pt')  # Can also try yolov8l.pt for even better accuracy\n",
+    "print(\"✓ YOLOv8 model loaded\")\n",
+    "\n",
+    "# Open input video\n",
+    "cap = cv2.VideoCapture(mp4_path)\n",
+    "\n",
+    "# Get video properties\n",
+    "fps_input = cap.get(cv2.CAP_PROP_FPS)\n",
+    "width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "print(f\"\\nInput Video Properties:\")\n",
+    "print(f\"  Resolution: {width}x{height}\")\n",
+    "print(f\"  FPS: {fps_input}\")\n",
+    "print(f\"  Total frames: {total_frames}\")\n",
+    "\n",
+    "# Set up output video writer\n",
+    "if debug == True:\n",
+    "    output_path = os.path.join(A5_savepath, 'task2.mp4')\n",
+    "    tracking_results_path = os.path.join(A5_savepath, 'task2_tracking.txt')\n",
+    "else:\n",
+    "    output_path = 'task2.mp4'\n",
+    "    tracking_results_path = 'task2_tracking.txt'\n",
+    "\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "out = cv2.VideoWriter(output_path, fourcc, fps_input, (width, height))\n",
+    "\n",
+    "# Open file to save tracking results\n",
+    "tracking_file = open(tracking_results_path, 'w')\n",
+    "\n",
+    "# Process video frame by frame\n",
+    "frame_idx = 0\n",
+    "tracking_data = []\n",
+    "\n",
+    "print(\"\\nProcessing video with YOLOv8 + ByteTrack...\")\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    frame_idx += 1\n",
+    "    \n",
+    "    # Run YOLOv8 tracking (ByteTrack built-in)\n",
+    "    results = model.track(\n",
+    "        source=frame,\n",
+    "        classes=[0],              # Only track people (class 0)\n",
+    "        conf=0.35,                # Lower confidence for better recall\n",
+    "        iou=0.7,                  # NMS IoU threshold\n",
+    "        tracker='bytetrack.yaml', # Use ByteTrack\n",
+    "        persist=True,             # Persist tracks across frames\n",
+    "        verbose=False,\n",
+    "        imgsz=640                 # Can increase to 1280 for small objects\n",
+    "    )\n",
+    "    \n",
+    "    # Extract tracking results\n",
+    "    for result in results:\n",
+    "        boxes = result.boxes\n",
+    "        if boxes is not None and boxes.id is not None:\n",
+    "            for box_coords, track_id in zip(boxes.xyxy, boxes.id):\n",
+    "                x1, y1, x2, y2 = box_coords.cpu().numpy()\n",
+    "                track_id = int(track_id.cpu().numpy())\n",
+    "                \n",
+    "                bb_left = int(x1)\n",
+    "                bb_top = int(y1)\n",
+    "                bb_width = int(x2 - x1)\n",
+    "                bb_height = int(y2 - y1)\n",
+    "                \n",
+    "                # Save tracking result\n",
+    "                tracking_file.write(f\"{frame_idx},{track_id},{bb_left},{bb_top},{bb_width},{bb_height}\\n\")\n",
+    "                tracking_data.append([frame_idx, track_id, bb_left, bb_top, bb_width, bb_height])\n",
+    "                \n",
+    "                # Draw on frame\n",
+    "                cv2.rectangle(frame, (int(x1), int(y1)), (int(x2), int(y2)), (0, 255, 0), 2)\n",
+    "                \n",
+    "                label = f'ID: {track_id}'\n",
+    "                label_size, _ = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.6, 2)\n",
+    "                label_y = max(int(y1) - 10, label_size[1] + 10)\n",
+    "                \n",
+    "                cv2.rectangle(frame, (int(x1), label_y - label_size[1] - 10), \n",
+    "                             (int(x1) + label_size[0], label_y), (0, 255, 0), -1)\n",
+    "                cv2.putText(frame, label, (int(x1), label_y - 5), \n",
+    "                           cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 0), 2)\n",
+    "    \n",
+    "    # Add frame number\n",
+    "    cv2.putText(frame, f'Frame: {frame_idx}/{total_frames}', (10, 30), \n",
+    "               cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "    \n",
+    "    out.write(frame)\n",
+    "    \n",
+    "    if frame_idx % 50 == 0:\n",
+    "        print(f\"  Processed frame {frame_idx}/{total_frames} ({frame_idx/total_frames*100:.1f}%)\")\n",
+    "\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "tracking_file.close()\n",
+    "\n",
+    "print(f\"\\n✓ Tracking complete!\")\n",
+    "print(f\"Output video: {output_path}\")\n",
+    "print(f\"Tracking results: {tracking_results_path}\")\n",
+    "print(f\"Total frames processed: {frame_idx}\")\n",
+    "print(f\"Total tracked detections: {len(tracking_data)}\")"
+   ]
   },
   {
    "cell_type": "code",
